# SSR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sceen Space Reflect.sln  Screen Space Reflect.sln  appveyor.yml
Engine/: CMakeLists.txt  ConCommand.cpp  ConCommand.h  ConVar.cpp  ConVar.h  ConsoleMessageExecutor.cpp  ConsoleMessageExecutor.h  Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  EnumStringMap.cpp  EnumStringMap.h  IConsoleMessage.h  IEngine.h  KeyValueReader.cpp  KeyValueReader.h  ReadMe.txt  ScriptKeyHandler.h  UICMap.h  UserInputCode.h  Window.cpp  Window.h  WindowPlatformEngine.cpp  WindowPlatformEngine.h  WindowPlatformInputConvertor.cpp  WindowPlatformInputConvertor.h  WindowPlatformKeyMap.cpp  WindowPlatformKeyMap.h  common.h  stdafx.h
Logic/: Aaboundingbox.cpp  Aaboundingbox.h  BoundingSphere.cpp  BoundingSphere.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CollisionUtil.cpp  CollisionUtil.h  ComputeShaderUnitTest.cpp  ComputeShaderUnitTest.h  ConstantBufferDefine.h  DebugConsole.cpp  DebugConsole.h  DisplayShaderResourceHelper.cpp  DisplayShaderResourceHelper.h  GameLogic.cpp  GameLogic.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  IListener.h  ILogic.h  INotifyGraphicsDevice.h  IRigidBody.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Logic.vcxproj  Logic.vcxproj.filters  MouseController.cpp  MouseController.h  Movement.h  PickingManager.cpp  PickingManager.h  Ray.cpp  (+22 more)
Logic/Model/: BaseMesh.cpp  BaseMesh.h  CommonMeshDefine.h  DebugMesh.cpp  DebugMesh.h  IMesh.h  IModelBuilder.h  IModelLoader.h  MeshBuildHelper.h  ModelBuilder.cpp  ModelManager.cpp  ModelManager.h  ObjMesh.cpp  ObjMesh.h  ObjMeshLoader.cpp  ObjMeshLoader.h  PlyMesh.cpp  PlyMesh.h  PlyMeshLoader.cpp  Surface.h
Logic/Source/: stdafx.h
RenderCore/: BaseMesh.cpp  BaseMesh.h  BlendStateFactory.cpp  BlendStateFactory.h  CMakeLists.txt  CommonMeshDefine.h  ConstantBufferDefine.h  D3D11BaseBuffer.cpp  D3D11BaseBuffer.h  D3D11BaseShader.cpp  D3D11BaseShader.h  D3D11Buffer.cpp  D3D11Buffer.h  D3D11ConstantBuffer.cpp  D3D11ConstantBuffer.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11PixelShader.cpp  D3D11PixelShader.h  D3D11RenderView.cpp  D3D11RenderView.h  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  D3D11VertexShader.cpp  D3D11VertexShader.h  DebugMesh.cpp  DebugMesh.h  DepthStencil.cpp  DepthStencil.h  DepthStencilStateFactory.cpp  DepthStencilStateFactory.h  Direct3D11.cpp  Direct3D11.h  IBuffer.h  IDepthStencil.h  IMaterial.h  IMesh.h  IMeshBuilder.h  IMeshLoader.h  IRenderResourceManager.h  (+90 more)
RenderCore/CommonRenderer/: ConstantBufferDefine.h  IBuffer.h  IMaterial.h  IRenderResource.h  IRenderResourceManager.h  IRenderState.h  IRenderView.h  IRenderer.h  IShader.h  ISurface.h  Resource.h
RenderCore/Debug/: texturemanager.obj.enc
RenderCore/Direct3D11/: D3D11BlendStateFactory.cpp  D3D11BlendStateFactory.h  D3D11Buffer.cpp  D3D11Buffer.h  D3D11ComputeShader.cpp  D3D11ComputeShader.h  D3D11DepthStencil.cpp  D3D11DepthStencil.h  D3D11DepthStencilStateFactory.cpp  D3D11DepthStencilStateFactory.h  D3D11PixelShader.cpp  D3D11PixelShader.h  D3D11RandomAccessResource.cpp  D3D11RandomAccessResource.h  D3D11RasterizerStateFactory.cpp  D3D11RasterizerStateFactory.h  D3D11RenderState.h  D3D11RenderStateManager.cpp  D3D11RenderStateManager.h  D3D11RenderTarget.cpp  D3D11RenderTarget.h  D3D11RenderView.cpp  D3D11RenderView.h  D3D11Resource.cpp  D3D11Resource.h  D3D11ResourceManager.cpp  D3D11ResourceManager.h  D3D11SamplerStateFactory.cpp  D3D11SamplerStateFactory.h  D3D11ShaderResource.cpp  D3D11ShaderResource.h  D3D11ShaderUtil.h  D3D11Texture.cpp  D3D11Texture.h  D3D11VertexShader.cpp  D3D11VertexShader.h  Direct3D11.cpp
RenderCore/Shader/: debugOverlay.fx  drawUI.fx  gsCascadedShadowmap.fx  lightCommon.fxh  make_shader.bat  psCommon.fxh  psDdaSSR.fx  psDdaSsrMs.fx  psDrawBackfaceDepth.fx  psGaussianBlurX.fx  psSSR.fx  psSSRBlend.fx  psSSRBlendMs.fx  psShadowmap.fx  psTexture.fx  shadowCommon.fxh  vsCommon.fxh  vsShadowmap.fx  vsTexture.fx  vsTutorial.fx
RenderCore/Shader/AtmoshpericScattering/: atmosphereCommon.fxh  csCopyInscatter1.fx  csCopyInscatterN.fx  csCopyIrradiance.fx  csInscatter1.fx  csInscatterN.fx  csInscatterS.fx  csIrradiance1.fx  csIrradianceN.fx  csTransmittance.fx  psDrawAtmosphere.fx  vsDrawAtmosphere.fx
RenderCore/Source/: RenderOutputManager.cpp  RenderOutputManager.h  stdafx.h
Sceen Space Reflect/: CMakeLists.txt  ReadMe.txt  Sceen Space Reflect.cpp  Sceen Space Reflect.rc  Sceen Space Reflect.vcxproj  Sceen Space Reflect.vcxproj.filters  Window.cpp  Window.h  common.h  stdafx.h
Sceen Space Reflect/Source/Private/: Sceen Space Reflect.cpp
Sceen Space Reflect/Source/Public/: Window.h  stdafx.h
Shader/: psSSR.fx  (+22 more)
Source/Aga/: CMakeLists.txt
Source/Aga/Public/: stdafx.h
Source/Agl/: CMakeLists.txt
Source/AssetManufacture/: CMakeLists.txt
Source/AssetManufacture/Private/: AssetManufacturer.cpp  DDSManufacturer.cpp  DirectXTexTool.cpp  EngineDefaultManufacturer.cpp  JsonManufacturer.cpp  ShaderFileMerger.cpp  ShaderManufacturer.cpp  ShaderTool.cpp  TextureManufacturer.cpp  WavefrontObjManufacturer.cpp  main.cpp
Source/AssetManufacture/Public/: AssetManufacturer.h  DDSManufacturer.h  DirectXTexTool.h  EngineDefaultManufacturer.h  JsonManufacturer.h  ManufactureConfig.h  PathEnvironment.h  ShaderFileMerger.h  ShaderManufacturer.h  ShaderTool.h  TextureManufacturer.h  WavefrontObjManufacturer.h  WavefrontObjParser.hpp
Source/Core/: CMakeLists.txt
Source/Core/Private/: TaskScheduler.cpp
Source/Core/Public/: Archive.h  ArchiveUtility.h  BitArray.h  Delegate.h  FileSystem.h  FixedBlockMemoryPool.h  HashUtil.h  MemoryPool.h  SizedTypes.h  SparseArray.h  TaskScheduler.h
Source/Editor/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Imgui/: CMakeLists.txt
Source/Logic/: CMakeLists.txt
Source/RenderCore/: CMakeLists.txt
Source/Sceen Space Reflect/: CMakeLists.txt
Source/ScreenSpaceReflection/: CMakeLists.txt
Source/Shaders/: CMakeLists.txt  make_shader.bat
(+1513 files in other folders)
